--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,26 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "IMDBflix",
+  "name": "IMDBflix",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "../src/Components/Assets/bookmark_icon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
+
     {
-      "src": "logo192.png",
+      "src": "../src/Components/Assets/IMDBFlixLogo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "../src/Components/Assets/Splash_Screen_Img.gif",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#ff0000",
+  "background_color": "#000000"
 }
