Updated Navigation Section Color

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,6 +21,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ff0000",
+  "theme_color": "#db202c",
   "background_color": "#000000"
 }
